--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.8.5",
+    "react-scripts": "3.1.1",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
     "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint src/**/*.tsx",
+    "lint:fix": "tslint --fix src/**/*.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
