--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
-    "@types/jest": "24.0.17",
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "^24.0.17",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.8.5",
+    "@types/styled-components": "^4.1.18",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.9.0",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "3.5.3"
@@ -19,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "lint": "tslint src/**/*.tsx",
     "lint:fix": "tslint --fix src/**/*.tsx"
