--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
-    "react-archer": "^1.1.2",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.17",
     "@types/node": "12.7.2",
@@ -20,7 +21,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.1.2",
     "react-test-renderer": "^16.9.0",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
@@ -32,7 +33,8 @@
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "lint": "tslint src/**/*.tsx",
-    "lint:fix": "tslint --fix src/**/*.tsx"
+    "lint:fix": "tslint --fix src/**/*.tsx",
+    "openapi": "openapi-generator generate -i ../private-tracker/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/openapi"
   },
   "eslintConfig": {
     "extends": "react-app"
