--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-axios-middleware": "^4.0.1",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
