--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "react-markdown": "^4.3.1",
     "react-scripts": "3.1.2",
     "react-test-renderer": "^16.9.0",
     "tslint": "^5.18.0",
