--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "lite-server": "^2.5.4",
     "react-markdown": "^4.3.1",
     "react-scripts": "3.1.2",
     "react-test-renderer": "^16.9.0",
@@ -40,6 +41,7 @@
     "eject": "react-scripts eject",
     "lint": "tslint src/**/*.tsx",
     "lint:fix": "tslint --fix src/**/*.tsx",
+    "server": "lite-server -c lite-server.json",
     "openapi": "openapi-generator generate -i ../private-tracker/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/openapi",
     "mock": "prism mock ../private-tracker/configuration/openapi/contract.yml"
   },
