--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@types/bencode": "^2.0.0",
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
+    "bencode": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.3",
@@ -42,7 +44,7 @@
     "lint": "tslint src/**/*.tsx",
     "lint:fix": "tslint --fix src/**/*.tsx",
     "server": "lite-server -c lite-server.json",
-    "openapi": "openapi-generator generate -i ../private-tracker/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/openapi",
+    "openapi": "openapi-generator generate -i ../glavenus/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/openapi",
     "mock": "prism mock ../private-tracker/configuration/openapi/contract.yml"
   },
   "eslintConfig": {
