--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-axios-middleware": "^4.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
