Use token to get post page

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
-    "lint": "tslint src/**/*.tsx",
-    "lint:fix": "tslint --fix src/**/*.tsx",
+    "lint": "tslint -c tslint.json 'src/**/*.tsx'",
+    "lint:fix": "yarn lint --fix",
     "server": "lite-server -c lite-server.json",
     "openapi": "openapi-generator generate -i ../glavenus/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/openapi",
     "mock": "prism mock ../glavenus/configuration/openapi/contract.yml"
