--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
     "bencode": "^2.0.1",
+    "material-ui-flat-pagination": "^4.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.3",
