--- a/package.json
+++ b/package.json
@@ -3,30 +3,35 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
-    "@types/bencode": "^2.0.0",
-    "@types/react-redux": "^7.1.5",
+    "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.8",
     "axios": "^0.19.0",
     "bencode": "^2.0.1",
-    "material-ui-flat-pagination": "^4.0.0",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-axios-middleware": "^4.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.11.2",
     "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
     "@stoplight/prism-cli": "^3.2.3",
+    "@types/bencode": "^2.0.0",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.17",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.8.5",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.1.18",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -35,9 +40,14 @@
     "react-markdown": "^4.3.1",
     "react-scripts": "3.1.2",
     "react-test-renderer": "^16.9.0",
+    "redux-devtools-extension": "^2.13.8",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "@graphql-codegen/typescript": "1.11.2",
+    "@graphql-codegen/typescript-operations": "1.11.2",
+    "@graphql-codegen/typescript-react-apollo": "1.11.2",
+    "@graphql-codegen/introspection": "1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,8 +57,9 @@
     "lint": "tslint -c tslint.json 'src/**/*.tsx'",
     "lint:fix": "yarn lint --fix",
     "server": "lite-server -c lite-server.json",
-    "openapi": "openapi-generator generate -i ../glavenus/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/openapi --model-name-suffix Dto",
-    "mock": "prism mock ../glavenus/configuration/openapi/contract.yml"
+    "openapi": "openapi-generator generate -i ../glavenus/configuration/openapi/contract.yml -g typescript-axios --skip-validate-spec --minimal-update -o src/generated/openapi --model-name-suffix Dto",
+    "mock": "prism mock ../glavenus/configuration/openapi/contract.yml",
+    "graphql": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
