--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^0.19.0",
     "bencode": "^2.0.1",
     "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.3",
@@ -22,6 +21,10 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.11.2",
+    "@graphql-codegen/introspection": "1.11.2",
+    "@graphql-codegen/typescript": "1.11.2",
+    "@graphql-codegen/typescript-operations": "1.11.2",
+    "@graphql-codegen/typescript-react-apollo": "1.11.2",
     "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
     "@stoplight/prism-cli": "^3.2.3",
     "@types/bencode": "^2.0.0",
@@ -36,6 +39,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "graphql-tag": "^2.10.1",
     "lite-server": "^2.5.4",
     "react-markdown": "^4.3.1",
     "react-scripts": "3.1.2",
@@ -43,11 +47,7 @@
     "redux-devtools-extension": "^2.13.8",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
-    "typescript": "3.5.3",
-    "@graphql-codegen/typescript": "1.11.2",
-    "@graphql-codegen/typescript-operations": "1.11.2",
-    "@graphql-codegen/typescript-react-apollo": "1.11.2",
-    "@graphql-codegen/introspection": "1.11.2"
+    "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
