--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "family-tree",
+  "name": "mizutsune",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.39",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "axios": "^0.19.0",
