--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.6.8",
     "axios": "^0.19.0",
     "bencode": "^2.0.1",
+    "chart.js": "^2.9.3",
     "graphql": "^14.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -29,6 +30,7 @@
     "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
     "@stoplight/prism-cli": "^3.2.3",
     "@types/bencode": "^2.0.0",
+    "@types/chart.js": "^2.9.11",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.17",
     "@types/node": "12.7.2",
