--- a/codegen.yml
+++ b/codegen.yml
@@ -1,12 +1,9 @@
 overwrite: true
-schema: "../glavenus/src/main/resources/graphql/query.graphqls"
-#documents: "src/**/*.graphql"
+schema:
+  - '../glavenus/src/main/resources/graphql/*.graphqls'
 generates:
   src/generated/graphql/index.tsx:
     plugins:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
-  ./graphql.schema.json:
-    plugins:
-      - "introspection"
