--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,12 +22,16 @@
   },
   "plugins": [
     "react",
+    "react-hooks",
     "@typescript-eslint"
   ],
   "settings": {
     "react": {
       "version": "detect"
     },
-    "rules": {}
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
+    }
   }
 }
