--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "enzyme-to-json": "^3.4.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "graphql-faker": "^2.0.0-rc.16",
     "graphql-tag": "^2.10.1",
     "lite-server": "^2.5.4",
