--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "axios": "^0.19.0",
-    "bencode": "^2.0.1",
     "chart.js": "^2.9.3",
     "graphql": "^14.5.8",
     "react": "^16.9.0",
@@ -28,7 +27,6 @@
     "@graphql-codegen/typescript-operations": "1.11.2",
     "@graphql-codegen/typescript-react-apollo": "1.11.2",
     "@stoplight/prism-cli": "^3.2.3",
-    "@types/bencode": "^2.0.0",
     "@types/chart.js": "^2.9.11",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.17",
@@ -49,6 +47,7 @@
     "graphql-faker": "^2.0.0-rc.16",
     "graphql-tag": "^2.10.1",
     "lite-server": "^2.5.4",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "react-markdown": "^4.3.1",
     "react-scripts": "3.1.2",
     "react-test-renderer": "^16.9.0",
