--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "zinogre",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "yarn": "1.x"
+  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "4.8.3",
