--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,8 +18,19 @@ jobs:
     - uses: actions/checkout@v2
     - name: GitHub Action for Yarn
       uses: Borales/actions-yarn@v2.1.0
+
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - uses: actions/cache@v1
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: v1-zinogre-${{ hashFiles('yarn.lock') }}
+
     - run: yarn install
-    - run: npm run build --if-present
+
     - name: Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.0.4
       with:
