--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
         key: v1-zinogre-${{ hashFiles('yarn.lock') }}
 
     - run: yarn install
+    - run: yarn generate
 
     - name: Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.0.4
